fixed designs for index and detail pages

--- a/public/front-end/signup.html
+++ b/public/front-end/signup.html
@@ -14,6 +14,7 @@
 
 <div class="container">
   <div class="row">
+    <div class="span4"><p>dsfdsf</p> <p>dsfsdf</p></div>
     <div class="span4 offset4 well">
       <legend>Please Sign In</legend>
             <div class="alert alert-error">
